// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcPhoneNumberInput :props should accept a custom "no countries" search result text 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-icon ec-dropdown-search__search-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search calling code"
    />
  </li>
  <!--v-if-->
  
  <li
    class="ec-dropdown-search__no-items"
    data-test="ec-dropdown-search__no-items"
    title="No country found"
  >
    No country found
  </li>
  
</ul>
`;

exports[`EcPhoneNumberInput :props should accept a custom search field text 1`] = `
<input
  autocomplete="off"
  class="ec-dropdown-search__search-input"
  data-test="ec-dropdown-search__search-input"
  placeholder="Search calling code"
/>
`;

exports[`EcPhoneNumberInput :props should render in a disabled state 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <!--v-if-->
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="true"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            disabled=""
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right ec-input-field__icon-wrapper--is-disabled"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-phone-number-input__number ec-input-field__input"
        disabled=""
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render in a loading state 1`] = `
<ec-stub
  autosize="min"
  class="ec-dropdown-search__trigger"
  data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
  disabled="false"
  distance="8"
  placement="bottom-start"
  popperclass="ec-dropdown-search__popover"
  shift="false"
  shown="false"
>
  
  
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!--v-if-->
    <input
      class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
      data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
      id="ec-phone-number-input-field-1"
      placeholder=""
      readonly=""
      type="text"
    />
    <!--v-if-->
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
      data-test="ec-input-field__icon-wrapper"
    >
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
    </div>
    <!--v-if-->
  </div>
  
  
  
  <div>
    <ul
      class="ec-dropdown-search__item-list"
      data-test="ec-dropdown-search__item-list"
    >
      <li
        class="ec-dropdown-search__search-area"
        data-test="ec-dropdown-search__search-area"
      >
        <svg
          class="ec-icon ec-dropdown-search__search-icon"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
        <input
          autocomplete="off"
          class="ec-dropdown-search__search-input"
          data-test="ec-dropdown-search__search-input"
          placeholder="Search..."
        />
      </li>
      <!--v-if-->
      <li>
        <div
          class="ec-loading"
          data-test="ec-loading"
        >
          <div
            class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
            data-test="ec-loading__backdrop"
          >
            <svg
              class="ec-icon ec-loading__icon"
              data-test="ec-loading__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-loading"
              />
            </svg>
          </div>
          <div
            class="ec-loading__content ec-loading__content--is-transparent"
            data-test="ec-loading__content"
          >
            
            <div
              class="ec-dropdown-search__loading"
              data-test="ec-dropdown-search__loading"
            />
            
          </div>
        </div>
      </li>
    </ul>
  </div>
  
</ec-stub>
`;

exports[`EcPhoneNumberInput :props should render with a bottom note 1`] = `
<div
  class="ec-phone-number-input__bottom-note"
  data-test="ec-phone-number-input__bottom-note"
>
  <span>
    Phone number input bottom note
  </span>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render with a disabled tooltip message 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <!--v-if-->
  <div
    class="ec-phone-number-input__input-group"
    data-ec-tooltip-mock-content="Disabled tooltip message"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="true"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            disabled=""
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right ec-input-field__icon-wrapper--is-disabled"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-phone-number-input__number ec-input-field__input"
        disabled=""
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render with a label 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <label
    class="ec-phone-number-input__label"
    for="ec-phone-number-input-field-1"
  >
    <span
      class="ec-phone-number-input__label-text"
      data-test="ec-phone-number-input__label-text"
    >
      Phone number input label
    </span>
    <!--v-if-->
  </label>
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-phone-number-input__number ec-input-field__input"
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render with a note 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <label
    class="ec-phone-number-input__label"
    for="ec-phone-number-input-field-1"
  >
    <!--v-if-->
    <span
      class="ec-phone-number-input__label-note"
      data-test="ec-phone-number-input__label-note"
    >
      Phone number input note
    </span>
  </label>
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-phone-number-input__number ec-input-field__input"
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render with a search field 1`] = `
<input
  autocomplete="off"
  class="ec-dropdown-search__search-input"
  data-test="ec-dropdown-search__search-input"
  placeholder="Search..."
/>
`;

exports[`EcPhoneNumberInput :props should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <!--v-if-->
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon my-sensitive-content-test-class"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list my-sensitive-content-test-class"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left my-sensitive-content-test-class"
        data-test="ec-phone-number-input__number ec-input-field__input"
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render with a warning 1`] = `
<div
  class="ec-phone-number-input__bottom-note ec-phone-number-input__bottom-note--is-warning"
  data-test="ec-phone-number-input__bottom-note"
>
  <span>
    Phone number input bottom note
  </span>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput :props should render with a warning tooltip 1`] = `
<div
  class="ec-phone-number-input__bottom-note ec-phone-number-input__bottom-note--is-warning"
  data-test="ec-phone-number-input__bottom-note"
>
  <span>
    Phone number input bottom note
  </span>
  <svg
    class="ec-icon ec-icon--warning ec-phone-number-input__warning-tooltip"
    data-ec-tooltip-mock-content="Warning tooltip message"
    data-test="ec-phone-number-input__warning-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      xlink:href="#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcPhoneNumberInput :props should render with an error message 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <!--v-if-->
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            aria-describedby="ec-phone-number-input-1"
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-error ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        aria-describedby="ec-phone-number-input-1"
        class="ec-input-field__input ec-input-field__input--is-in-group-left ec-input-field__input--has-error"
        data-test="ec-phone-number-input__number ec-input-field__input"
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div
    class="ec-phone-number-input__error-text"
    data-test="ec-phone-number-input__error-text"
    id="ec-phone-number-input-1"
  >
    <span>
      Random error message
    </span>
    <!--v-if-->
  </div>
</div>
`;

exports[`EcPhoneNumberInput :props should render with icon static prefix 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <!--v-if-->
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="static/prefixicons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="static/prefixicons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="static/prefixicons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-phone-number-input__number ec-input-field__input"
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput should render properly 1`] = `
<div
  class="ec-phone-number-input"
  data-test="ec-phone-number-input"
>
  <!--v-if-->
  <div
    class="ec-phone-number-input__input-group"
    data-test="ec-phone-number-input__input-group ec-mock ec-tooltip-mock"
  >
    <div
      class="ec-phone-number-input__countries ec-dropdown ec-dropdown-search"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        autosize="min"
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        disabled="false"
        distance="8"
        placement="bottom-start"
        popperclass="ec-dropdown-search__popover"
        shift="false"
        shown="false"
      >
        
        
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!--v-if-->
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-phone-number-input__countries ec-dropdown__input ec-input-field__input"
            id="ec-phone-number-input-field-1"
            placeholder=""
            readonly=""
            type="text"
          />
          <!--v-if-->
          <div
            class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-icon ec-input-field__icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        
        
        
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
              data-test="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-icon ec-dropdown-search__search-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
            <!--v-if-->
            
            
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="United Kingdom +44"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="United Kingdom"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/gb.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  United Kingdom
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +44
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Jamaica +1 658"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Jamaica"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/jm.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Jamaica
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +1 658
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Spain +34"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <img
                  alt="Spain"
                  class="ec-phone-number-input__countries-item-flag"
                  data-test="ec-phone-number-input__countries-item-flag"
                  src="icons/country-flags/100/es.png"
                />
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  Spain
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +34
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
              title="New Country +204"
            >
              
              
              <div
                class="ec-phone-number-input__countries-item-wrapper"
              >
                <!--v-if-->
                <span
                  class="ec-phone-number-input__countries-item-name"
                  data-test="ec-phone-number-input__countries-item-name"
                >
                  New Country
                </span>
                <span
                  class="ec-phone-number-input__countries-item-area-code"
                  data-test="ec-phone-number-input__countries-item-area-code"
                >
                  +204
                </span>
              </div>
              
              
            </li>
            
            
          </ul>
        </div>
        
      </ec-stub>
    </div>
    <!--v-if-->
    <div
      class="ec-input-field ec-phone-number-input__number"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-phone-number-input__number ec-input-field__input"
        id="ec-input-field-3"
        type="tel"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcPhoneNumberInput v-model should preselect a country item from the v-model and do not show the image if country code is not set 1`] = `
<div
  class="ec-phone-number-input__countries-selected"
  data-test="ec-phone-number-input__countries-selected"
>
  <!--v-if-->
  <span
    class="ec-phone-number-input__countries-selected-area-code"
    data-test="ec-phone-number-input__countries-selected-area-code"
  >
    +204
  </span>
</div>
`;

exports[`EcPhoneNumberInput v-model should preselect a country item from the v-model and do not show the image if does not exist 1`] = `
<div
  class="ec-phone-number-input__countries-selected"
  data-test="ec-phone-number-input__countries-selected"
>
  <!--v-if-->
  <span
    class="ec-phone-number-input__countries-selected-area-code"
    data-test="ec-phone-number-input__countries-selected-area-code"
  >
    +204
  </span>
</div>
`;

exports[`EcPhoneNumberInput v-model should preselect the country item in the dropdown and the number in the input from the v-model 1`] = `
<div
  class="ec-phone-number-input__countries-selected"
  data-test="ec-phone-number-input__countries-selected"
>
  <img
    alt="United Kingdom"
    class="ec-phone-number-input__countries-selected-image"
    data-test="ec-phone-number-input__countries-selected-image"
    src="icons/country-flags/100/gb.png"
  />
  <span
    class="ec-phone-number-input__countries-selected-area-code"
    data-test="ec-phone-number-input__countries-selected-area-code"
  >
    +44
  </span>
</div>
`;
